POTBAG/AntlrFiles/SWAEParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from SWAE.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class SWAEParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		WHITESPACE=1, KEYWORD_TEXT=2, KEYWORD_STRING=3, END_STMT=4, STRING=5, 
		TRAVEL_KEYWORD=6, INCREMENT=7, CURLY_LEFT=8, CURLY_RIGHT=9, PAREN_LEFT=10, 
		PAREN_RIGHT=11, SQUARE_LEFT=12, SQUARE_RIGHT=13, KEYWORD_BOOL=14, KEYWORD_INPUT=15, 
		KEYWORD_INT=16, KEYWORD_IF=17, KEYWORD_ELSE=18, KEYWORD_ELSEIF=19, KEYWORD_WHILE=20, 
		KEYWORD_FOR=21, KEYWORD_LOCATION=22, KEYWORD_SETUP=23, KEYWORD_PLAYER=24, 
		KEYWORD_LOCATIONARRAY=25, KEYWORD_LOCATIONS=26, KEYWORD_CHOICE=27, KEYWORD_RANDOM=28, 
		COMMA_SEPERATOR=29, DOT=30, BOOL_CMP_OPERATOR=31, CMP_OPERATOR=32, ASSIGN_OPERATOR=33, 
		COMPOUND_OPERATOR=34, TIMES_OPERATOR=35, DIVISION_OPERATOR=36, PLUS_OPERATOR=37, 
		MINUS_OPERATOR=38, ARROW_OPERATOR=39, AND_OPERATOR=40, OR_OPERATOR=41, 
		BOOL=42, NUM=43, VAR_NAME=44, COMMENT=45;
	public const int
		RULE_prog = 0, RULE_buffernode = 1, RULE_setup = 2, RULE_locationsetup = 3, 
		RULE_locationmapping = 4, RULE_playersetup = 5, RULE_inBlock = 6, RULE_expression = 7, 
		RULE_statement = 8, RULE_assign = 9, RULE_declaration = 10, RULE_text_statement = 11, 
		RULE_input_statement = 12, RULE_if_chain_statement = 13, RULE_if_statement = 14, 
		RULE_else_if_statement = 15, RULE_else_statement = 16, RULE_travel_statement = 17, 
		RULE_choice_statement = 18, RULE_option_statment = 19, RULE_while_statement = 20, 
		RULE_anonymous_assign = 21, RULE_int_assign = 22, RULE_string_assign = 23, 
		RULE_input_assign = 24, RULE_location_assign = 25, RULE_bool_assign = 26, 
		RULE_int_declaration = 27, RULE_string_declaration = 28, RULE_location_declaration = 29, 
		RULE_bool_declaration = 30, RULE_predicate = 31, RULE_random = 32, RULE_variable = 33, 
		RULE_string_obj = 34, RULE_bool_obj = 35, RULE_dot_notaion = 36;
	public static readonly string[] ruleNames = {
		"prog", "buffernode", "setup", "locationsetup", "locationmapping", "playersetup", 
		"inBlock", "expression", "statement", "assign", "declaration", "text_statement", 
		"input_statement", "if_chain_statement", "if_statement", "else_if_statement", 
		"else_statement", "travel_statement", "choice_statement", "option_statment", 
		"while_statement", "anonymous_assign", "int_assign", "string_assign", 
		"input_assign", "location_assign", "bool_assign", "int_declaration", "string_declaration", 
		"location_declaration", "bool_declaration", "predicate", "random", "variable", 
		"string_obj", "bool_obj", "dot_notaion"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'Text '", "'string '", "';'", null, "'Travel '", "'++'", 
		"'{'", "'}'", "'('", "')'", "'['", "']'", "'bool'", "'userInput'", "'int'", 
		"'if'", "'else'", "'else if'", "'while'", "'for'", "'Location'", "'setup'", 
		"'player'", "'LocationArray'", "'Locations'", "'choice'", "'rollNr'", 
		"','", "'.'", null, null, "'='", null, "'*'", "'/'", "'+'", "'-'", "'->'", 
		null, null, null, null, null, "'//'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WHITESPACE", "KEYWORD_TEXT", "KEYWORD_STRING", "END_STMT", "STRING", 
		"TRAVEL_KEYWORD", "INCREMENT", "CURLY_LEFT", "CURLY_RIGHT", "PAREN_LEFT", 
		"PAREN_RIGHT", "SQUARE_LEFT", "SQUARE_RIGHT", "KEYWORD_BOOL", "KEYWORD_INPUT", 
		"KEYWORD_INT", "KEYWORD_IF", "KEYWORD_ELSE", "KEYWORD_ELSEIF", "KEYWORD_WHILE", 
		"KEYWORD_FOR", "KEYWORD_LOCATION", "KEYWORD_SETUP", "KEYWORD_PLAYER", 
		"KEYWORD_LOCATIONARRAY", "KEYWORD_LOCATIONS", "KEYWORD_CHOICE", "KEYWORD_RANDOM", 
		"COMMA_SEPERATOR", "DOT", "BOOL_CMP_OPERATOR", "CMP_OPERATOR", "ASSIGN_OPERATOR", 
		"COMPOUND_OPERATOR", "TIMES_OPERATOR", "DIVISION_OPERATOR", "PLUS_OPERATOR", 
		"MINUS_OPERATOR", "ARROW_OPERATOR", "AND_OPERATOR", "OR_OPERATOR", "BOOL", 
		"NUM", "VAR_NAME", "COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SWAE.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static SWAEParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SWAEParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SWAEParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class ProgContext : ParserRuleContext {
		public BuffernodeContext buffernode() {
			return GetRuleContext<BuffernodeContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(SWAEParser.Eof, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISWAEListener typedListener = listener as ISWAEListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISWAEListener typedListener = listener as ISWAEListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISWAEVisitor<TResult> typedVisitor = visitor as ISWAEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74; buffernode();
			State = 75; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BuffernodeContext : ParserRuleContext {
		public SetupContext setup() {
			return GetRuleContext<SetupContext>(0);
		}
		public InBlockContext[] inBlock() {
			return GetRuleContexts<InBlockContext>();
		}
		public InBlockContext inBlock(int i) {
			return GetRuleContext<InBlockContext>(i);
		}
		public BuffernodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_buffernode; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISWAEListener typedListener = listener as ISWAEListener;
			if (typedListener != null) typedListener.EnterBuffernode(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISWAEListener typedListener = listener as ISWAEListener;
			if (typedListener != null) typedListener.ExitBuffernode(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISWAEVisitor<TResult> typedVisitor = visitor as ISWAEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBuffernode(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BuffernodeContext buffernode() {
		BuffernodeContext _localctx = new BuffernodeContext(Context, State);
		EnterRule(_localctx, 2, RULE_buffernode);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77; setup();
			State = 81;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KEYWORD_TEXT) | (1L << KEYWORD_STRING) | (1L << TRAVEL_KEYWORD) | (1L << PAREN_LEFT) | (1L << KEYWORD_BOOL) | (1L << KEYWORD_INPUT) | (1L << KEYWORD_INT) | (1L << KEYWORD_IF) | (1L << KEYWORD_WHILE) | (1L << KEYWORD_LOCATION) | (1L << KEYWORD_PLAYER) | (1L << KEYWORD_CHOICE) | (1L << KEYWORD_RANDOM) | (1L << NUM) | (1L << VAR_NAME))) != 0)) {
				{
				{
				State = 78; inBlock();
				}
				}
				State = 83;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SetupContext : ParserRuleContext {
		public ITerminalNode KEYWORD_SETUP() { return GetToken(SWAEParser.KEYWORD_SETUP, 0); }
		public ITerminalNode CURLY_LEFT() { return GetToken(SWAEParser.CURLY_LEFT, 0); }
		public LocationsetupContext locationsetup() {
			return GetRuleContext<LocationsetupContext>(0);
		}
		public PlayersetupContext playersetup() {
			return GetRuleContext<PlayersetupContext>(0);
		}
		public ITerminalNode CURLY_RIGHT() { return GetToken(SWAEParser.CURLY_RIGHT, 0); }
		public SetupContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_setup; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISWAEListener typedListener = listener as ISWAEListener;
			if (typedListener != null) typedListener.EnterSetup(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISWAEListener typedListener = listener as ISWAEListener;
			if (typedListener != null) typedListener.ExitSetup(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISWAEVisitor<TResult> typedVisitor = visitor as ISWAEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSetup(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SetupContext setup() {
		SetupContext _localctx = new SetupContext(Context, State);
		EnterRule(_localctx, 4, RULE_setup);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84; Match(KEYWORD_SETUP);
			State = 85; Match(CURLY_LEFT);
			State = 86; locationsetup();
			State = 87; playersetup();
			State = 88; Match(CURLY_RIGHT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LocationsetupContext : ParserRuleContext {
		public ITerminalNode KEYWORD_LOCATIONS() { return GetToken(SWAEParser.KEYWORD_LOCATIONS, 0); }
		public ITerminalNode ASSIGN_OPERATOR() { return GetToken(SWAEParser.ASSIGN_OPERATOR, 0); }
		public ITerminalNode CURLY_LEFT() { return GetToken(SWAEParser.CURLY_LEFT, 0); }
		public ITerminalNode CURLY_RIGHT() { return GetToken(SWAEParser.CURLY_RIGHT, 0); }
		public LocationmappingContext[] locationmapping() {
			return GetRuleContexts<LocationmappingContext>();
		}
		public LocationmappingContext locationmapping(int i) {
			return GetRuleContext<LocationmappingContext>(i);
		}
		public LocationsetupContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_locationsetup; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISWAEListener typedListener = listener as ISWAEListener;
			if (typedListener != null) typedListener.EnterLocationsetup(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISWAEListener typedListener = listener as ISWAEListener;
			if (typedListener != null) typedListener.ExitLocationsetup(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISWAEVisitor<TResult> typedVisitor = visitor as ISWAEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLocationsetup(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LocationsetupContext locationsetup() {
		LocationsetupContext _localctx = new LocationsetupContext(Context, State);
		EnterRule(_localctx, 6, RULE_locationsetup);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90; Match(KEYWORD_LOCATIONS);
			State = 91; Match(ASSIGN_OPERATOR);
			State = 92; Match(CURLY_LEFT);
			State = 94;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 93; locationmapping();
				}
				}
				State = 96;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==KEYWORD_PLAYER || _la==VAR_NAME );
			State = 98; Match(CURLY_RIGHT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LocationmappingContext : ParserRuleContext {
		public VariableContext[] variable() {
			return GetRuleContexts<VariableContext>();
		}
		public VariableContext variable(int i) {
			return GetRuleContext<VariableContext>(i);
		}
		public ITerminalNode ARROW_OPERATOR() { return GetToken(SWAEParser.ARROW_OPERATOR, 0); }
		public ITerminalNode END_STMT() { return GetToken(SWAEParser.END_STMT, 0); }
		public ITerminalNode[] COMMA_SEPERATOR() { return GetTokens(SWAEParser.COMMA_SEPERATOR); }
		public ITerminalNode COMMA_SEPERATOR(int i) {
			return GetToken(SWAEParser.COMMA_SEPERATOR, i);
		}
		public LocationmappingContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_locationmapping; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISWAEListener typedListener = listener as ISWAEListener;
			if (typedListener != null) typedListener.EnterLocationmapping(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISWAEListener typedListener = listener as ISWAEListener;
			if (typedListener != null) typedListener.ExitLocationmapping(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISWAEVisitor<TResult> typedVisitor = visitor as ISWAEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLocationmapping(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LocationmappingContext locationmapping() {
		LocationmappingContext _localctx = new LocationmappingContext(Context, State);
		EnterRule(_localctx, 8, RULE_locationmapping);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 100; variable();
			State = 101; Match(ARROW_OPERATOR);
			State = 107;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 102; variable();
					State = 103; Match(COMMA_SEPERATOR);
					}
					} 
				}
				State = 109;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			State = 110; variable();
			State = 111; Match(END_STMT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PlayersetupContext : ParserRuleContext {
		public ITerminalNode KEYWORD_PLAYER() { return GetToken(SWAEParser.KEYWORD_PLAYER, 0); }
		public ITerminalNode ASSIGN_OPERATOR() { return GetToken(SWAEParser.ASSIGN_OPERATOR, 0); }
		public ITerminalNode CURLY_LEFT() { return GetToken(SWAEParser.CURLY_LEFT, 0); }
		public ITerminalNode CURLY_RIGHT() { return GetToken(SWAEParser.CURLY_RIGHT, 0); }
		public AssignContext[] assign() {
			return GetRuleContexts<AssignContext>();
		}
		public AssignContext assign(int i) {
			return GetRuleContext<AssignContext>(i);
		}
		public PlayersetupContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_playersetup; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISWAEListener typedListener = listener as ISWAEListener;
			if (typedListener != null) typedListener.EnterPlayersetup(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISWAEListener typedListener = listener as ISWAEListener;
			if (typedListener != null) typedListener.ExitPlayersetup(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISWAEVisitor<TResult> typedVisitor = visitor as ISWAEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPlayersetup(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PlayersetupContext playersetup() {
		PlayersetupContext _localctx = new PlayersetupContext(Context, State);
		EnterRule(_localctx, 10, RULE_playersetup);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113; Match(KEYWORD_PLAYER);
			State = 114; Match(ASSIGN_OPERATOR);
			State = 115; Match(CURLY_LEFT);
			State = 117;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 116; assign();
				}
				}
				State = 119;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KEYWORD_STRING) | (1L << KEYWORD_BOOL) | (1L << KEYWORD_INT) | (1L << KEYWORD_LOCATION) | (1L << KEYWORD_PLAYER) | (1L << VAR_NAME))) != 0) );
			State = 121; Match(CURLY_RIGHT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InBlockContext : ParserRuleContext {
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public AssignContext assign() {
			return GetRuleContext<AssignContext>(0);
		}
		public DeclarationContext declaration() {
			return GetRuleContext<DeclarationContext>(0);
		}
		public InBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_inBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISWAEListener typedListener = listener as ISWAEListener;
			if (typedListener != null) typedListener.EnterInBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISWAEListener typedListener = listener as ISWAEListener;
			if (typedListener != null) typedListener.ExitInBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISWAEVisitor<TResult> typedVisitor = visitor as ISWAEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InBlockContext inBlock() {
		InBlockContext _localctx = new InBlockContext(Context, State);
		EnterRule(_localctx, 12, RULE_inBlock);
		try {
			State = 127;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 123; statement();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 124; expression(0);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 125; assign();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 126; declaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ITerminalNode PAREN_LEFT() { return GetToken(SWAEParser.PAREN_LEFT, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode PAREN_RIGHT() { return GetToken(SWAEParser.PAREN_RIGHT, 0); }
		public VariableContext variable() {
			return GetRuleContext<VariableContext>(0);
		}
		public RandomContext random() {
			return GetRuleContext<RandomContext>(0);
		}
		public ITerminalNode NUM() { return GetToken(SWAEParser.NUM, 0); }
		public ITerminalNode TIMES_OPERATOR() { return GetToken(SWAEParser.TIMES_OPERATOR, 0); }
		public ITerminalNode DIVISION_OPERATOR() { return GetToken(SWAEParser.DIVISION_OPERATOR, 0); }
		public ITerminalNode PLUS_OPERATOR() { return GetToken(SWAEParser.PLUS_OPERATOR, 0); }
		public ITerminalNode MINUS_OPERATOR() { return GetToken(SWAEParser.MINUS_OPERATOR, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISWAEListener typedListener = listener as ISWAEListener;
			if (typedListener != null) typedListener.EnterExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISWAEListener typedListener = listener as ISWAEListener;
			if (typedListener != null) typedListener.ExitExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISWAEVisitor<TResult> typedVisitor = visitor as ISWAEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		return expression(0);
	}
